# dcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: dcp.yml
datacopy/: __init__.py
datacopy/cli/: app.py
datacopy/data_copy/: __init__.py  base.py  graph.py
datacopy/data_copy/copiers/to_database/: __init__.py  database_to_database.py  file_to_database.py  memory_to_database.py
datacopy/data_copy/copiers/to_file/: __init__.py  memory_to_file.py
datacopy/data_copy/copiers/to_memory/: __init__.py  database_to_memory.py  file_to_memory.py  memory_to_memory.py
datacopy/data_copy/copiers_old/: database_to_memory.py  file_to_database.py  memory_to_database.py  memory_to_file.py  memory_to_memory.py
datacopy/data_format/: __init__.py  base.py  handler.py  inference.py
datacopy/data_format/formats/database/: base.py  mysql.py
datacopy/data_format/formats/file_system/: __init__.py  arrow_file.py  csv_file.py  json_lines_file.py
datacopy/data_format/formats/memory/: __init__.py  arrow_table.py  csv_file_object.py  dataframe.py  json_lines_file_object.py  records.py
datacopy/storage/: base.py
datacopy/storage/database/: api.py  utils.py
datacopy/storage/database/engines/: __init__.py  mysql.py  postgres.py  sqlite.py
datacopy/storage/file_system/engines/: local.py
datacopy/storage/memory/: memory_records_object.py
datacopy/storage/memory/engines/: python.py
datacopy/utils/: data.py  pandas.py
dcp/: __init__.py  logging.py
dcp/cli/: app.py  command.py  helpers.py  infer.py
dcp/data_copy/: __init__.py  base.py  conversion.py  costs.py  graph.py  helpers.py
dcp/data_copy/copiers/: __init__.py  database_to_memory.py  file_to_database.py  memory_to_database.py  memory_to_memory.py
dcp/data_copy/copiers/to_database/: __init__.py  database_to_database.py  file_to_database.py  memory_to_database.py
dcp/data_copy/copiers/to_file/: memory_to_file.py
dcp/data_copy/copiers/to_memory/: database_to_memory.py  file_to_memory.py  memory_to_memory.py
dcp/data_copy/copiers_old/: database_to_memory.py  file_to_database.py  memory_to_database.py  memory_to_memory.py
dcp/data_format/: __init__.py  base.py  formats.py  formats_old.py  handler.py  inference.py
dcp/data_format/formats/: __init__.py
dcp/data_format/formats/database/: __init__.py  base.py  mysql.py
dcp/data_format/formats/file_system/: __init__.py  arrow_file.py  csv_file.py  json_lines_file.py
dcp/data_format/formats/key_value/: base.py
dcp/data_format/formats/memory/: __init__.py  arrow_table.py  csv_file_object.py  csv_lines_iterator.py  database_cursor.py  dataframe.py  dataframe_iterator.py  json_lines_file_object.py  records.py  records_iterator.py  reocrds.py
dcp/data_format/handlers/: __init__.py  base.py
dcp/data_format/handlers/memory/: dataframe.py
dcp/storage/: base.py
dcp/storage/database/: api.py  utils.py
dcp/storage/database/engines/: __init__.py  bigquery.py  mysql.py  postgres.py  redshift.py  (+1 more)
dcp/storage/key_value/: base.py
dcp/storage/memory/: __init__.py  iterator.py  memory_records_object.py
dcp/utils/: common.py  data.py  pandas.py
docs/: mkdocs.yml
tests/: test_cli_app.py  test_data_format.py  test_database_api.py  test_field_types.py  test_iterator.py  test_schema.py  test_storage.py  test_utils.py  utils.py
tests/test_data_copy/: test_base.py  test_database_to_database.py  test_database_to_memory.py  test_file_to_database.py  test_file_to_memory.py  test_memory_to_database.py  test_memory_to_file.py  test_memory_to_memory.py
tests/test_e2e/: test_all_combos.py
(+6 files in other folders)
