[tool.poetry]
authors = ["Ken Van Haren <kenvanharen@gmail.com>"]
description = "dcp - Data Copy"
license = "BSD-3-Clause"
name = "datacopy"
packages = [
  {include = "dcp"},
]
version = "0.1.27"

[tool.poetry.dependencies]
Jinja2 = "^3.0.3"
PyYAML = ">= 5.4.1"
SQLAlchemy = "^1.4.7"
cleo = "^0.8.1"
common-model = "^0.4.1"
loguru = "^0.5.3"
networkx = "^2.5"
pandas = "^1.2.3"
python = ">= 3.7.4"
python-dateutil = "^2.8.1"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
# common-model = {path = "../common-model", develop = true}
flake8 = "^3.8.1"
gcsfs = "^2021.6.1"
google-cloud-storage = "^1.39.0"
ipython = "^7.13.0"
isort = "^4.3.21"
mysqlclient = "^2.0.3"
pre-commit = "^2.1.1"
psycopg2-binary = "^2.9.1"
pyarrow = "^6.0.1"
pydeps = "^1.9.0"
pytest = "^4.6"
pytest-cov = "^2.8.1"
sqlalchemy-redshift = {git = "https://github.com/kvh/sqlalchemy-redshift.git", rev = "2a99b23"}

[tool.poetry.scripts]
dcp = "dcp.cli:app"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
